gcp/gke/ingress-backend-config/infrastructure/kubernets/support/config-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-test
  name: my-service
  labels:
    purpose: demonstrate-cdn
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"cloud-cdn-backendconfig"}}'
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      name: http-port
      protocol: TCP
