gcp/gke/ingress-backend-config/infrastructure/kubernets/support/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ingress-test
  name: main-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ingress-test" # terraform から作成した固定IPを割り当てる
spec:
  rules:
    - http:
        paths:
          - path: /frontend1
            pathType: ImplementationSpecific
            backend:
              service:
                name: main-service
                port:
                  number: 80
